--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@ https://developer.mozilla.org/En/Using_web_workers
 		var stats, scene, renderer;
 		var camera, cameraControl;
 var grid = [];
+var MAX_CUBES = 6;
 
 		if( !init() )	animate();
 
@@ -64,7 +65,7 @@ function toggleCube( cube ) {
 
 function resetGrid(){
     var x,y,z,max,cube;
-    max = 8;
+    max = MAX_CUBES;
     z = 0;
     for(; z < max; z+=1){
 	y = 0;
@@ -96,14 +97,14 @@ var workerData;
 var player = new THREE.Vector3(4.1,3.1,1.1);
 
 function setIntersection(grid, pos) {
-    var x = 0, y = 0, z = 0, max = 8, count = 0, cube;
+    var x = 0, y = 0, z = 0, max = MAX_CUBES, count = 0, cube;
 			for(; z < max; z += 1 ) {
 			    y = 0;
 			    for(; y < max; y += 1 ) {
 				x = 0;
 				for(; x < max; x += 1 ) {
 				    cube = grid[z][y][x].position;				    
-				    if( pos.x > cube.x && pos.x < cube.x + .9 && pos.y > cube.y && pos.y < cube.y + .9 && pos.z > cube.z && pos.z < cube.z + .9) {
+				    if( pos.x >= cube.x && pos.x < cube.x + .9 && pos.y >= cube.y && pos.y < cube.y + .9 && pos.z >= cube.z && pos.z < cube.z + .9) {
 //					console.log('hit');
 					
 					// normally toggle
@@ -131,6 +132,7 @@ var skeletonData;
 function updateSkeleton() {
     resetGrid();
     if( skeletonData !== undefined ){
+	
     var i = 0; max = skeletonData.length;
     for(; i < max; i += 1 ) {
 	setIntersection(grid, skeletonData[i]);
@@ -141,10 +143,11 @@ function updateSkeleton() {
 }
 
 		function init(){
+		    console.log('Init Kinect Worker');
 		    setInterval(updateSkeleton, 1000/30);
 		    kinectWorker = new Worker('kinectMock.js');
 		    kinectWorker.onmessage = function(event) {
-			console.log(event.data);
+			//console.log(event.data);
 			skeletonData = JSON.parse(event.data);
 
 			// http://blog.sethladd.com/2011/09/box2d-and-web-workers-for-javascript.html
@@ -160,6 +163,7 @@ function updateSkeleton() {
 			//					    console.log("Worker said " + event.data);
 			//console.log(event.data.data);
 			console.log(event.data);
+			console.log('worker completed');
 			workerData = JSON.parse(event.data);
 		    };
 
@@ -183,7 +187,7 @@ function updateSkeleton() {
 			if( Detector.webgl ){
 				renderer = new THREE.WebGLRenderer({
 					antialias		: false,	// to get smoother output
-					preserveDrawingBuffer	: true	// to allow screenshot
+					preserveDrawingBuffer	: false	// to allow screenshot
 				});
 				renderer.setClearColorHex( 0xBBBBBB, 1 );
 			// uncomment if webgl is required
@@ -233,7 +237,7 @@ function updateSkeleton() {
 			scene.add( mesh );
 		    */
 
-		    var x = 0, y = 0, z = 0, max = 8, cube, offset = 1;
+		    var x = 0, y = 0, z = 0, max = MAX_CUBES, cube, offset = 1;
 		    for(; z < max; z+= 1) {
 			y = 0;
 			layer = [];
@@ -254,7 +258,7 @@ function updateSkeleton() {
 				cube.life = 255;
 
 				var random = Math.floor((Math.random()*25)+1);
-				if( random === 5) {
+				if( random === 5 && false) {
 				    cube.material.transparent = false;
 				    cube.material.opacity = 1;
 				    cube.material.color = (new THREE.Color()).setRGB( 255, 0, 0 );
