Removed tool tips text

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ https://developer.mozilla.org/En/Using_web_workers
 		<div class="top">
 		</div>
 		<div class="bottom" id="inlineDoc" >
-			- <i>p</i> for screenshot
+<!--			- <i>p</i> for screenshot-->
 		</div> 
 	</div> 
 
@@ -226,7 +226,7 @@ function updateSkeleton() {
 			// allow 'f' to go fullscreen where this feature is supported
 			if( THREEx.FullScreen.available() ){
 				THREEx.FullScreen.bindKey();		
-				document.getElementById('inlineDoc').innerHTML	+= "- <i>f</i> for fullscreen";
+	      /*document.getElementById('inlineDoc').innerHTML	+= "- <i>f</i> for fullscreen";*/
 			}
 		    /*
 			// here you add your objects
